LoadingCircle bugfix *remove console logs *fixed the css-overflow bug *menu overlap *campuscompetence -link

--- a/src/less/grid.less
+++ b/src/less/grid.less
@@ -222,7 +222,8 @@
 }
 @media (min-width: 900px) and (max-width: 1200px) {
     .c-block {
-        height: 27.5rem
+        height: 27.5rem;
+        overflow: hidden;
     }
 }
 @media (min-width: 1201px) and (max-width: 1599px) {
