--- a/src/less/navbar.less
+++ b/src/less/navbar.less
@@ -353,7 +353,8 @@ a[ng-click]{
         float: left;
         height: auto;
         overflow-y: visible;
-        position: static
+        position: static;
+        margin: 0px -25px;
     }
     .no-touch [class*=nav-link-level] {
         border: 0;
